2002-04-10  Jeroen Zwartepoorte  <jeroen@xs4all.nl>

	* gdl/Makefile.am: Added gdl-recent.[ch].
	* gdl/gdl-recent.c: New class for displaying recent files/projects.
	* gdl/gdl-recent.h: Idem.
	* gdl/gdl.h: Added new header files.

2002-04-09  Dave Camp  <dave@ximian.com>

	* gdl/gdl-icons.c (remove_icon_file_name_suffix): Fix the string
	comparison.

	* gdl/gdl-data-view.c (gdl_data_view_class_init): Add an 
	expander_size style property.

	* gdl/gdl-data-row.c: Remove the custom expand and remove pixbufs,
	and draw the expander with gtk.

2002-04-09  Dave Camp  <dave@ximian.com>

	* gdl/gdl-dock-notebook.c (gdl_dock_notebook_bring_to_front): New
	function.

	* gdl/gdl-dock.c (gdl_dock_bring_to_front): New function.

2002-03-17  JP Rosevear  <jpr@ximian.com>

	* Makefile.am: remove scintilla-control dir reference

	* Remove scintilla stuff for good

2002-03-16  Jeroen Zwartepoorte  <jeroen@xs4all.nl>

	* gdl/Makefile.am: Added gdl-file-selector-util.[ch] back and also added
	gdl-tools.c
	* gdl/gdl-file-selector-util.c: (listener_cb),
	(replace_existing_file), (ok_clicked_cb), (concat_dir_and_file),
	(create_gtk_selector), (run_file_selector),
	(gdl_file_selector_open), (gdl_file_selector_open_multi),
	(gdl_file_selector_save): Ported to GTK+ 2.0 and added replace dialog
	if you selected a file in a save dialog that already exists.
	* gdl/gdl-tools.h: Added gdl_button_new_with_stock_image method.
	* gdl/gdl-tools.c: Idem.

2002-03-10  Dave Camp  <dave@ximian.com>

	* configure.in:  Require librsvg.
	* gdl/Makefile.am: Add new files.
	* symbol-browser-control/symbol-browser.c: (get_image_for_type): 
	Use the gdl-icons to get the folder icon.
	* gdl/gdl-icons.[ch]: 
	* gdl/defailt-icon.[ch]: 
	* gdl/program.xpm:
	* gdl/shared.xpm:
	* gdl/static.xpm: New files.

2002-02-23  Jeroen Zwartepoorte  <jeroen@xs4all.nl>

	* symbol-browser-control/gnome-symbol-browser.xml: Move "FormatUpdate"
	menuitem to the "View" menu
